tests/NormalTests/paczka1/small_fuzzy/35442420.err
Error in line 13: K3Lp6I S489 272,13
Error in line 6: cJp76Vk3J S267 30,9
